# hand-wave

./: .env.example  .gitattributes  .gitignore  .oxfmtrc.json  .prettierignore  LICENSE.md  README.MD  bun.lockb  package.json  pnpm-lock.yaml
.codex/skills/expect/: README.md
.conductor/: settings.toml
.github/workflows/: modal-inference.yml
.moon/: workspace.yml
.moon/tasks/: node.yml  python.yml
apps/inference/: Dockerfile  README.md  modal_app.py  moon.yml  pyproject.toml
apps/inference/models/: .gitignore  best.ckpt
apps/inference/models/lm/: README.md  neutral_english_4gram.kenlm
apps/inference/src/inference/: contract.py  ctc.py  decoder.py  dependencies.py  eval_trace.py  features.py  generated_schemas.py  language.py  main.py  model.py  network.py  recognition.py  recognition_helpers.py  runtime.py  schemas.py  sessions.py  text_normalizer.py
apps/inference/src/inference/routers/: health.py  predictions.py  sessions.py
apps/inference/tests/: test_language.py  test_recognition.py  test_runtime.py  test_smoke.py  test_trace_fixtures.py
apps/inference/tests/fixtures/traces/: README.md  hello-there-2026-06-08.json
apps/mobile/: .gitignore  .swift-format  Podfile  Project.swift  Tuist.swift  moon.yml
apps/mobile/Configurations/: HandWave.xcconfig.example
apps/mobile/HandWave/Resources/AppIcon.icon/: icon.json
apps/mobile/HandWave/Sources/: HandWaveApp.swift
apps/mobile/HandWave/Sources/DesignSystem/: Haptics.swift  Palette.swift  Theme.swift  Typography.swift
apps/mobile/HandWave/Sources/Models/: AppModel.swift  LandmarkModels.swift  Landmarks.swift  StreamModel.swift  WearablesModel.swift
apps/mobile/HandWave/Sources/Services/: ActiveHandSelector.swift  Arbiter.swift  CameraFrame.swift  FailureDescriptions.swift  FrameGate.swift  HandSide.swift  InferClient.swift  InferSession.swift  InferenceClient.swift  InferenceFailure.swift  InferenceSessionController.swift  Recognizer.swift  (+12 more)
apps/mobile/HandWave/Tests/: ActiveHandSelectorTests.swift  FrameGateTests.swift  HandWaveTests.swift  InferSessionTests.swift  LandmarkSelectionTests.swift  PixelBufferConverterTests.swift
apps/mobile/Tuist/: Package.swift
apps/web/: .oxlintrc.json  components.json  eslint.config.js  moon.yml  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/public/: robots.txt  site.webmanifest  sitemap.xml
apps/web/src/: inference-arbitration.test.ts  inference-arbitration.ts  inference.ts  landmarks.ts
apps/web/src/components/: camera.tsx
apps/web/src/config/: env.ts  inference.ts  site.ts
apps/web/src/hooks/: use-capture-session.ts  use-fullscreen.ts  use-hand-landmarker.ts  use-infer.ts  use-inference-session.ts  use-landmarks.ts  use-video-devices.ts
apps/web/src/routes/: __root.tsx  globals.css  index.tsx
apps/web/src/stores/: detections-store.ts  dev-store.ts  landmarks-store.ts
apps/web/src/types/: capture.ts  detections.ts  dev.ts  inference.ts  landmarks.ts
(+64 files in other folders)
