[project]
name = "hand-wave-inference"
version = "0.1.0"
description = "FastAPI inference service for Hand Wave."
requires-python = ">=3.13"
dependencies = ["fastapi>=0.128.0", "uvicorn[standard]>=0.38.0"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inference"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
