[project]
name = "hand-wave-inference"
version = "0.1.0"
description = "FastAPI inference service for Hand Wave."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=1.26,<3",
    "pyctcdecode>=0.5.0",
    "rapidfuzz>=3.14.5",
    "torch>=2.2,<2.6",
    "torchaudio>=2.2,<2.6",
    "uvicorn[standard]>=0.38.0",
    "wordfreq>=3.1.1",
    "wordsegment>=1.3.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]
deploy = [
    "modal>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inference"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
