[project]
name = "hand-wave-inference"
version = "0.1.0"
description = "FastAPI inference service for Hand Wave."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.128.0",
    "kenlm @ https://github.com/kpu/kenlm/archive/refs/heads/master.zip",
    "numpy>=1.26,<3",
    "pyctcdecode>=0.5.0",
    "torch>=2.2,<2.6",
    "torchaudio>=2.2,<2.6",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "datamodel-code-generator>=0.58.0",
    "httpx>=0.28.1",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]
deploy = [
    "modal>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inference"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/inference/generated_schemas.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
